[tool.poetry]
name = "llama-toolbox"
version = "0.1.0"
description = "A collection of tools for LLaMA 3.x LLMs"
authors = ["Trevor Grant <trevor.d.grant@gmail.com>"]
license = "ASFv2"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
plugins = []