[tool.poetry]
name = "llama_toolbox"
version = "0.1.0"
description = "A collection of tools for LLaMA 3.x LLMs"
authors = ["Trevor Grant <trevor.d.grant@gmail.com>"]
license = "ASFv2"
readme = "README.md"
packages = [{include = "llama_toolbox"}]

[tool.poetry.dependencies]
python = "^3.7"
GitPython = "^3.1.43"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
